--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
   "dependencies": {
     "@ai-sdk/openai-compatible": "^1.0.19",
     "@ai-sdk/react": "^2.0.56",
+    "@playwright/test": "^1.55.1",
     "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^24.5.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/web": "^0.0.271",
     "ai": "^5.0.56",
     "autoprefixer": "^10.4.21",
+    "lucide-react": "^0.544.0",
     "next": "^14.2.15",
     "postcss": "^8.5.6",
     "react": "^18.3.1",
