--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:integration": "playwright test",
+    "test:all": "npm run test && npm run test:integration"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +23,6 @@
   "dependencies": {
     "@ai-sdk/openai-compatible": "^1.0.19",
     "@ai-sdk/react": "^2.0.56",
-    "@playwright/test": "^1.55.1",
     "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^24.5.2",
     "@types/react": "^18.3.12",
@@ -37,5 +41,13 @@
     "tailwindcss": "^3.4.16",
     "typescript": "^5.9.2",
     "zod": "^4.1.11"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.55.1",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "jest": "^30.1.3",
+    "jest-environment-jsdom": "^30.1.2"
   }
 }
